--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -5,49 +5,49 @@
    "id": "86b115a8-9791-4698-95d4-3fe172d42708",
    "metadata": {},
    "source": [
-    "# Task 1: Sentence Transformer Implementation  \r\n",
-    "### Purpose:  \r\n",
-    "Develop a model that encodes sentences into fixed-length embeddings.  \r\n",
-    "This serves as the foundational step before expanding into multi-task learning.\r\n",
-    "\r\n",
-    "---\r\n",
-    "\r\n",
-    "## Thought Process  \r\n",
-    "\r\n",
-    "Task 1 seemed quite straightforward, just encoding sentences into embeddings. **But as I started working on it,** I realized that the choice of framework and model depends a lot on the use case and context. Sometimes, a simpler and faster model is better than a highly accurate but heavy one, especially when speed and efficiency matter more.  \r\n",
-    "\r\n",
-    "**For this assignment, I thought making decisions while keeping Fetch Rewards in mind would be super interesting and relevant.** Since I already understand how it works from a user’s perspective, I wanted something that was **lightweight, fast, scalable, and well-suited for short receipt entries.**  \r\n",
-    "\r\n",
-    "I went with `sentence-transformers` because it is built exactly for this kind of task. It handles **tokenization, pooling, and encoding** in one go, so I did not have to set all that up manually.  \r\n",
-    "\r\n",
-    "- I considered using **raw PyTorch**, but that would mean coding the entire pipeline myself, which felt unnecessary for something this simple.  \r\n",
-    "- **Hugging Face’s transformers library** was another option, but using it directly would require manually defining tokenizers and pooling.  \r\n",
-    "- Since `sentence-transformers` is **PyTorch-based and leverages Hugging Face models under the hood**, it made the most sense.  \r\n",
-    "\r\n",
-    "Beyond choosing **MiniLM** as the transformer backbone, I also had to decide **how to process the embeddings efficiently.**  \r\n",
-    "\r\n",
-    "- I used **MiniLM’s built-in mean pooling** rather than max pooling or CLS token representation, as it provides a **balanced and stable sentence-level representation.**  \r\n",
-    "- **Since no specific training data was provided,** I opted to use MiniLM’s **pretrained embeddings directly,** prioritizing **speed and generalization** over task-specific adaptation.  \r\n",
-    "- While some models struggle with **noisy text or typos**, from my experience, **receipt data is usually well-structured and does not commonly have such issues.** Given this, **MiniLM’s pretrained embeddings should generalize well without requiring additional fine-tuning.**  \r\n",
-    "\r\n",
-    "---\r\n",
-    "\r\n",
-    "## Model Selection  \r\n",
-    "\r\n",
-    "I picked **`all-MiniLM-L6-v2`** because:  \r\n",
-    "\r\n",
-    "- It is **small** with **22 million parameters** and **384-dimensional embeddings** but still performs well.  \r\n",
-    "- I considered **BERT (110M, 768D)** and **DistilBERT (66M, 768D)**, but they seemed **overkill** for what I needed.  \r\n",
-    "- Fetch receipts typically have **short and structured text** like `\"2x Apples $1.99\"`, so I did not need a massive model for context-heavy sentences.  \r\n",
-    "- MiniLM is **optimized for sentence embeddings**, runs **faster**, and already has **mean pooling built in**, so I did not have to add anything extra.  \r\n",
-    "\r\n",
-    "---\r\n",
-    "\r\n",
-    "## Final Decision  \r\n",
-    "\r\n",
-    "In the end, I **prioritized speed and efficiency over unnecessary complexity.**  \r\n",
-    "MiniLM gave me **solid embeddings without slowing things down**, which made it the best choice for this task.  \r\n",
-    "\r\n"
+    "# Task 1: Sentence Transformer Implementation  \n",
+    "### Purpose:  \n",
+    "Develop a model that encodes sentences into fixed-length embeddings.  \n",
+    "This serves as the foundational step before expanding into multi-task learning.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Thought Process  \n",
+    "\n",
+    "Task 1 seemed quite straightforward, just encoding sentences into embeddings. **But as I started working on it,** I realized that the choice of framework and model depends a lot on the use case and context. Sometimes, a simpler and faster model is better than a highly accurate but heavy one, especially when speed and efficiency matter more.  \n",
+    "\n",
+    "**For this assignment, I thought making decisions while keeping Fetch Rewards in mind would be super interesting and relevant.** Since I already understand how it works from a user’s perspective, I wanted something that was **lightweight, fast, scalable, and well-suited for short receipt entries.**  \n",
+    "\n",
+    "I went with `sentence-transformers` because it is built exactly for this kind of task. It handles **tokenization, pooling, and encoding** in one go, so I did not have to set all that up manually.  \n",
+    "\n",
+    "- I considered using **raw PyTorch**, but that would mean coding the entire pipeline myself, which felt unnecessary for something this simple.  \n",
+    "- **Hugging Face’s transformers library** was another option, but using it directly would require manually defining tokenizers and pooling.  \n",
+    "- Since `sentence-transformers` is **PyTorch-based and leverages Hugging Face models under the hood**, it made the most sense.  \n",
+    "\n",
+    "Beyond choosing **MiniLM** as the transformer backbone, I also had to decide **how to process the embeddings efficiently.**  \n",
+    "\n",
+    "- I used **MiniLM’s built-in mean pooling** rather than max pooling or CLS token representation, as it provides a **balanced and stable sentence-level representation.**  \n",
+    "- **Since no specific training data was provided,** I opted to use MiniLM’s **pretrained embeddings directly,** prioritizing **speed and generalization** over task-specific adaptation.  \n",
+    "- While some models struggle with **noisy text or typos**, from my experience, receipt data is usually well-structured and does not commonly have such issues (I'm not covering complex use cases like promotional discounts in this task) Given this, **MiniLM’s pretrained embeddings should generalize well without requiring additional fine-tuning.**  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Model Selection  \n",
+    "\n",
+    "I picked **`all-MiniLM-L6-v2`** because:  \n",
+    "\n",
+    "- It is **small** with **22 million parameters** and **384-dimensional embeddings** but still performs well.  \n",
+    "- I considered **BERT (110M, 768D)** and **DistilBERT (66M, 768D)**, but they seemed **overkill** for what I needed.  \n",
+    "- Fetch receipts typically have **short and structured text** like `\"2x Apples $1.99\"`, so I did not need a massive model for context-heavy sentences.  \n",
+    "- MiniLM is **optimized for sentence embeddings**, runs **faster**, and already has **mean pooling built in**, so I did not have to add anything extra.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Final Decision  \n",
+    "\n",
+    "In the end, I **prioritized speed and efficiency over unnecessary complexity.**  \n",
+    "MiniLM gave me **solid embeddings without slowing things down**, which made it the best choice for this task.  \n",
+    "\n"
    ]
   },
   {
@@ -64,7 +64,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       ">  Tomatoes 2kgs\n",
