--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "- I used **MiniLM’s built-in mean pooling** rather than max pooling or CLS token representation, as it provides a **balanced and stable sentence-level representation.**  \n",
     "- **Since no specific training data was provided,** I opted to use MiniLM’s **pretrained embeddings directly,** prioritizing **speed and generalization** over task-specific adaptation.  \n",
-    "- While some models struggle with **noisy text or typos**, from my experience, receipt data is usually well-structured and does not commonly have such issues (I'm not covering complex use cases like promotional discounts in this task) Given this, **MiniLM’s pretrained embeddings should generalize well without requiring additional fine-tuning.**  \n",
+    "- While some models struggle with **noisy text or typos**, from my experience, receipt data is usually well-structured and does not commonly have such issues (I'm not covering complex use cases like promotional discounts in this task). Given this, **MiniLM’s pretrained embeddings should generalize well without requiring additional fine-tuning.**  \n",
     "\n",
     "---\n",
     "\n",
